# watch-my-escape

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  outline.md  package-lock.json  package.json  pyproject.toml
.agents/skills/commit/: SKILL.md
.agents/skills/generate-map/: SKILL.md
.agents/skills/generate-map/scripts/: __init__.py  validate_map.py
.github/workflows/: deploy-space.yml
requirements/: hf-zerogpu.txt  llm-cpu.txt  llm-cuda-cu124.txt  llm-metal.txt  llm-rocm-linux.txt  llm-rocm-windows.txt  llm-vulkan.txt
space/: .gitattributes  README.frontmatter.yml  __init__.py  app.py  requirements.txt
src/watch_my_escape/: __init__.py  __main__.py  cli.py  doctor.py  escape_room.py  server.py  setup_llm.py
src/watch_my_escape/agent/: __init__.py  emotions.py  escape_demo.py  escape_run.py  history.py  prompts.py  runner.py
src/watch_my_escape/agent/prompt_templates/: __init__.py  action-system.md  action-user.md  deliberation-system.md  deliberation-user.md
src/watch_my_escape/app/: __init__.py  schemas.py  server.py
src/watch_my_escape/game/: __init__.py  action_options.py  actions.py  emotions.py  engine.py  maps.py  models.py  premade_maps.py  runtime.py  simple_maps.py  tools.py
src/watch_my_escape/game/map_data/: __init__.py  exit-tax.json  key-door-room.json  library-password-room.json  mission-impawsible.json  panda.json  quiz-out.json  red-green-blue.json
src/watch_my_escape/llm/: client.py  config.py  evaluate_models.py  gguf.py  models.py  structured.py  tool_calls.py  tracing.py
src/watch_my_escape/web/static/: app.js  input.css
src/watch_my_escape/web/static/app/: custom-maps.js  dom.js  game-runner.js  map-renderer.js  maps.js  model-warmup.js  models.js  screens.js
src/watch_my_escape/web/static/app/editor/: behavior-form.js  constants.js  controller.js  document.js  entity-form.js  grid.js  history.js  icons.js  presets.js  state.js  tabs.js  validation.js
src/watch_my_escape/web/static/app/shared/: downloads.js  html.js  sprites.js  strings.js
src/watch_my_escape/web/static/styles/: animations.css  base.css  controls.css  editor-forms.css  editor.css  fonts.css  game.css  map.css  popups.css  screens.css  select.css  theme.css
src/watch_my_escape/web/templates/: index.html.jinja
src/watch_my_escape/web/templates/screens/: _editor.html.jinja  _game.html.jinja  _map_select.html.jinja  _menu.html.jinja  _model_select.html.jinja  _splash.html.jinja  _warmup.html.jinja
tests/: __init__.py  test_agent_runner.py  test_cli.py  test_escape_demo.py  test_escape_room.py  test_escape_run.py  test_evaluate_models.py  test_game_actions.py  test_game_entities.py  test_game_maps.py  test_game_runtime.py  test_gguf.py  test_llm_client.py  test_llm_config.py  test_llm_tool_calls.py  test_llm_tracing.py  test_premade_maps.py  test_server.py  test_setup_llm.py
