[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watch-my-escape"
version = "0.1.0"
description = "An LLM tries to escape a man-made puzzle room."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "gradio",
    "jinja2",
]

[project.scripts]
watch-my-escape = "watch_my_escape.app.server:main"

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # Prefer no blank line before class docstrings; this conflicts with D211.
    "D213", # Prefer multi-line docstring summaries on the first line; this conflicts with D212.
    "COM812", # Let Ruff format manage trailing commas to avoid formatter/linter churn.
    "ISC001", # Let Ruff format manage implicit string concatenation spacing.
]

[tool.ruff.lint.per-file-ignores]
"src/**/*.py" = [
    "CPY001", # Do not require copyright headers in this small application skeleton.
]
"tests/**/*.py" = [
    "CPY001", # Do not require copyright headers in test files.
    "D100", # Test modules can be named clearly without module docstrings.
    "D103", # Test function names describe behavior without extra docstrings.
    "S101", # Pytest assertions are the standard test assertion style.
    "PLR2004", # Literal expected values keep small tests readable.
    "ANN201", # Test functions do not need return annotations when they only assert behavior.
]
